MSS-1393 - FIxed Images stretch Issues raised by UAT

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/_variables.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/_variables.scss
@@ -5,6 +5,7 @@ $font-gill-std-semibold: "gill-sans-nova", Arial, sans-serif;
 $font-gills-light: "gill-sans-nova", Arial, sans-serif;;
 $font-gill-std-normal: "gill-sans-nova", Arial, sans-serif;
 $font-futura-pt-demi: "futura-pt-demi", Arial, sans-serif;
+$font-gill-sans-std: "GillSansMTStd-Medium", Arial, sans-serif;
 $font-awesome: "FontAwesome";
 
 $pink-snow: #FBF7F7;
@@ -35,6 +36,8 @@ $white-smoke: #F0F0F0;
 
 $grid-breakpoints: (
   xs: 0,
+  custom-xs:280px,
+  custom-sm:400px,
   sm: 576px,
   md: 768px,
   lg: 992px,
