--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/search.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/search.scss
@@ -363,7 +363,17 @@
             }
         }
     }
+
+    .cs-carousel-wrapper {
+        margin-top: rem(32);
+
+        img {
+            max-width: 100%;
+            width: 100%;
+        }
+    }
 }
+
 
 .plp-redesign {
     margin-bottom: rem(20);
@@ -540,7 +550,7 @@
                 }
 
                 &-toggle {
-                    font-family: $font-gill-std-bold;
+                    font-family: $font-gill-sans-std;
                     font-size: rem(15);
                     font-weight: 600;
                     color: $gray20;
@@ -552,7 +562,7 @@
                     right: 0;
                     width: rem(200);
                     text-align: left;
-                    padding: rem(19) rem(20);
+                    padding: rem(18) rem(20);
 
                     &::after {
                         content: "";
@@ -561,7 +571,7 @@
                         height: rem(20);
                         position: absolute;
                         right: rem(20);
-                        top: rem(22);
+                        top: rem(20);
                         transition: transform 0.3s;
                         background-size: 100%;
                         margin: 0;
@@ -1053,7 +1063,7 @@
                 width: 100%;
                 border: rem(1) solid $gray90;
                 border-radius: rem(5);
-                font-family: $font-gill-std-semibold;
+                font-family: $font-gill-sans-std;
                 font-size: rem(12);
                 line-height: rem(16);
                 font-weight: 600;
@@ -1354,13 +1364,51 @@
 
             &-tile {
                 background: $snow;
+                min-height: auto;
+
+                .tile-picture {
+                    transition: 0.3s all;
+                    display: block;
+
+                    &-hidden {
+                        display: none;
+                    }
+
+                    img {
+                        width: 100%;
+                    }
+                }
 
                 &:hover {
                     box-shadow: 0 rem(2) rem(6) rgba(155, 155, 155, 0.5);
+
                     @include media-breakpoint-up(lg) {
                         margin-bottom: rem(-56);
                         position: relative;
                         z-index: 5;
+                    }
+
+                    .tile-picture {
+                        display: none;
+
+                        &-hidden {
+                            display: block;
+                        }
+                    }
+
+                    .tile-body {
+                        @include media-breakpoint-up(lg) {
+                            min-height: rem(140);
+                            height: auto;
+                        }
+    
+                        @include media-breakpoint-up(md) {
+    
+                        }
+    
+                        @include media-breakpoint-up(sm) {
+                            padding: rem(15) rem(20);
+                        }
                     }
 
                     .cta-add-to-cart {
@@ -1368,54 +1416,38 @@
                             display: block;
                         }
                     }
-
-                    .image-container {
-                        a {
-                            .tile-picture {
-                                &-primary {
-                                    opacity: 0;
-                                }
-                                &-hidden {
-                                    opacity: 1;
-                                }
-                            }
-                        }
-                    }
                 }
                 .image-container {
                     background: $pink-smoke;
                     border: none;
-                    height: rem(225);
+                    height: auto;
+
+                    @include media-breakpoint-up(custom-xs) {
+                        min-height: 80vw;
+                    }
+
+                    @include media-breakpoint-up(custom-sm) {
+                        min-height: 76.5vw;
+                    }
 
                     @include media-breakpoint-up(sm) {
-                        height: rem(240);
+                        min-height: rem(368);
                     }
+
                     @include media-breakpoint-up(lg) {
-                        height: rem(260);
+                        min-height: rem(328);
                     }
-                    @include media-breakpoint-up(xxl) {
-                        height: rem(340);
+
+                    @include media-breakpoint-up(xl) {
+                        min-height: rem(450);
+                        height: auto;
                     }
+                    
                     a {
                         height: 100%;
                         width: 100%;
                         position: relative;
                         display: block;
-
-                        .tile-picture {
-                            position: absolute;
-                            height: 100%;
-                            width: 100%;
-                            transition: 0.3s all;
-
-                            &-hidden {
-                                opacity: 0;
-                            }
-
-                            img {
-                                height: 100%;
-                            }
-                        }
                     }
 
                     .product-badge.redesigned {
@@ -1440,6 +1472,22 @@
                 .tile-body {
                     text-align: left;
                     padding: rem(10) rem(15);
+                    background-color: $snow;
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    width: 100%;
+                    display: block;
+                    transition: 0.5s all;
+
+                    @include media-breakpoint-up(lg) {
+                        min-height: rem(100);
+                        height: auto;
+                    }
+
+                    @include media-breakpoint-up(md) {
+
+                    }
 
                     @include media-breakpoint-up(sm) {
                         padding: rem(15) rem(20);
@@ -1566,7 +1614,7 @@
                     }
 
                     .save-value {
-                        font-family: $font-gill-std-semibold;
+                        font-family: $font-gill-sans-std;
                         font-size: rem(12);
                         color: $black;
                         font-weight: 600;
@@ -1768,6 +1816,7 @@
         margin-bottom: rem(30);
     }
 }
+
 
 .no-overflow {
     overflow: hidden;
